working on requests

--- a/src/main/webapp/userList.xhtml
+++ b/src/main/webapp/userList.xhtml
@@ -65,7 +65,7 @@
             	</p:panelGrid>
             	<br></br>
             	
-            	<p:commandButton id="userProfileButton" value="Profile" action="profile" />
+            	<p:commandButton id="userProfileButton" value="Profile" action="#{RequestBean.loadRqForSelectedUser}" />
         	</p:outputPanel>
     		</p:dialog>
 	 	</div>
