--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -35,7 +35,7 @@
 		</h:panelGrid>
 		
 		<p:commandButton id="loginButton" value="Login" action="#{LoginBean.check}" update="@form"/>
-		<p:commandButton id="registerButton" value="Sign Up!" immediate="true" action="register" />
+		<p:commandButton id="registerButton" value="Sign Up!" immediate="true" action="register?faces-redirect=true" />
 		
 	</h:form>
 </h:body>
