--- a/src/main/webapp/userList.xhtml
+++ b/src/main/webapp/userList.xhtml
@@ -35,8 +35,6 @@
                 <f:facet name="header">
         			Users	
    				</f:facet>
-   				
-        		<p:ajax event="rowSelect" listener="#{UserTableBean.onRowSelect}" update=":form:userDetail" oncomplete="PF('userDialog').show()" />
         		
         		<p:column headerText="Id" sortBy="#{user.id}" filterBy="#{user.id}">
             		<h:outputText value="#{user.id}" />
@@ -54,6 +52,7 @@
 	 	
 	 	<p:contextMenu for="userTable">
         	<p:menuitem value="Profile" icon="pi pi-search" action="#{RequestBean.loadRqForSelectedUser}"/>
+        	<p:menuitem value="Cancel" icon="pi pi-times" />
     	</p:contextMenu>
 	 	
 	</h:form>
